--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
             <button class="button operator">*</button>
             <button class="button zero">0</button>
             <button class="button">.</button>
+            <button class="button">←</button>
             <button class="button operator">=</button>
             
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
